--- a/.cproject
+++ b/.cproject
@@ -42,11 +42,17 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.1192990093.219819216" name="mixer_scarlett_gen2.c" rcbsApplicability="disable" resourcePath="debug-drv/mixer_scarlett_gen2.c" toolsToInvoke="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1886815435.2002145291">
-						<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1886815435.2002145291" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1886815435"/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.1192990093.1708276893" name="checksum.cpp" rcbsApplicability="disable" resourcePath="reverse-eng/checksum.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1422061414.1961640933">
+						<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1422061414.1961640933" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.1422061414"/>
+						<tool customBuildStep="true" id="org.eclipse.cdt.managedbuilder.ui.rcbs.2049637212" name="Resource Custom Build Step">
+							<inputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.inputtype.1593475431" name="Resource Custom Build Step Input Type">
+								<additionalInput kind="additionalinputdependency" paths=""/>
+							</inputType>
+							<outputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.outputtype.1794293076" name="Resource Custom Build Step Output Type"/>
+						</tool>
 					</fileInfo>
 					<sourceEntries>
-						<entry excluding="debug-drv/mixer_scarlett_gen2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="reverse-eng/checksum.cpp|debug-drv/mixer_scarlett_gen2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -93,11 +99,11 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.exe.release.930194647.1268322368" name="mixer_scarlett_gen2.c" rcbsApplicability="disable" resourcePath="debug-drv/mixer_scarlett_gen2.c" toolsToInvoke="cdt.managedbuild.tool.gnu.c.compiler.exe.release.570199966.1101601991">
-						<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.570199966.1101601991" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.570199966"/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.release.930194647.1275015497" name="checksum.cpp" rcbsApplicability="disable" resourcePath="reverse-eng/checksum.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1276414846.2004972538">
+						<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1276414846.2004972538" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1276414846"/>
 					</fileInfo>
 					<sourceEntries>
-						<entry excluding="debug-drv/mixer_scarlett_gen2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="reverse-eng/checksum.cpp|debug-drv/mixer_scarlett_gen2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
